--- a/pages/admin/admin_login.html
+++ b/pages/admin/admin_login.html
@@ -29,7 +29,7 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
                     <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">For Customers</a>
-                    <a href="admin_login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Admin Login</a>
+                    <a href="../login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Admin Login</a>
                 </nav>
             </div>
         </div>
@@ -108,17 +108,10 @@
                 </form>
             </div>
 
-            <!-- Customer Login Link -->
+            <!-- Unified Login Link -->
             <div class="text-center mt-6">
-                <a href="../customers/customer_login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
-                    Are you a customer? Sign in here
-                </a>
-            </div>
-
-            <!-- Restaurant Login Link -->
-            <div class="text-center mt-4">
-                <a href="../restaurants/restaurant_login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
-                    Restaurant login
+                <a href="../login.html" class="text-text-secondary hover:text-primary transition-smooth text-sm">
+                    Back to unified login
                 </a>
             </div>
         </div>
