--- a/pages/delivery/rider_login.html
+++ b/pages/delivery/rider_login.html
@@ -29,7 +29,7 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
                     <a href="../restaurants/restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">Browse Restaurants</a>
-                    <a href="rider_login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Rider Sign In</a>
+                    <a href="../login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Rider Sign In</a>
                 </nav>
 
                 <!-- Sign Up Link -->
