--- a/pages/restaurants/restaurant_login.html
+++ b/pages/restaurants/restaurant_login.html
@@ -29,7 +29,7 @@
                 <!-- Navigation -->
                 <nav class="hidden md:flex space-x-8">
                     <a href="restaurant_browse.html" class="text-text-secondary hover:text-primary transition-smooth">For Customers</a>
-                    <a href="restaurant_login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Restaurant Login</a>
+                    <a href="../login.html" class="text-primary font-medium border-b-2 border-primary pb-1">Restaurant Login</a>
                 </nav>
             </div>
         </div>
